--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,14 @@ spring.datasource.username=Peliculas
 spring.datasource.password=1234
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
+#Al setear la siguiente linea en true, hago que genere la instancia de renovar la BD por cada ejecución
+spring.jpa.generate-ddl=true
+#Al setear la siguiente linea en create, elimino contenido anterior y genero tablas "limpias" por cada ejecución
+spring.jpa.hibernate.ddl-auto=create
+#Si desea generar persistencia de data, debe cambiar las lineas predecesoras por "false" y "validate" o "update", respectivamente
 spring.jpa.show-sql=true
-    
+#spring.datasource.schema=classpath:creaRoles.sql
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
